--- a/index.html
+++ b/index.html
@@ -894,6 +894,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="DEI-DIOGO">Frederico Monteiro</a> |
 						<a href="DEI-DAVID">João Raposo</a> |
 						<a href="DEEC-PAOLO-ROMANO">Pedro Mendes</a> |
 						<a href="DEI-LUISA">Diogo Pinheiro</a> |
