--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@ involved in several research projects related to geospatial aspects in informati
 			</ul>
 			<h3>PhD Students</h3>
 			<ul>
-			<li>Tiago Gonçalves, <i>Visual Analysis of Human Mobility Data</i>, FCUL (<i>co-supervision with Prof. Ana Paula Afonso</i>)</li>
+			<li>Tiago Gonçalves, <i>Visual Analysis of Human Mobility Data</i>, FCUL (<i>co-supervised with Prof. Ana Paula Afonso</i>)</li>
 			<li>João Monteiro, <i>Mining multi-source and multi-modal geo-referenced information</i>, IST (<i>ongoing co-supervision with Prof. João Moura Pires</i>)</li>
 			<li>Luís Borges, <i>Neural Information Retrieval</i>, IST/CMU-PT (<i>ongoing co-supervision with Prof. Jamie Callan</i>)</li>
 			</ul>
