--- a/index.html
+++ b/index.html
@@ -713,6 +713,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://www.maisonworkshop.org">MAISoN'20</a> |
+						<a href="http://eric.univ-lyon2.fr/adbis-tpdl-eda-2020/tpdl/">TPDL'20</a> |
 						<a href="http://www.kdd.org/kdd2020/">KDD'20</a> |
 						<a href="https://sites.google.com/view/trac2/home">TRAC-2020</a> |
 						<a href="https://ijcai20.org">IJCAI-PRICAI'20</a> |
