--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ involved in several research projects related to geospatial aspects in informati
 			<ul>
 <li>MOnitoring Outbreak events for Disease surveillance in a data science context (MOOD - H2020-SC1-BHC-2018-2020 874850)</li>
 <li>A Machine Learning-Based Forecasting System for Shellfish Safety (MATISSE - FCT DSAIPA/DS/0026/2019)</li>
-<li>Factors to promote healthy dialogue and behaviours in online school communities (HEALTI.CO - FCT DSAIPA/DS/0102/2019)</li>
+<li>Factors to promote healthy dialogue and behaviours in online school communities (DEBAQI - FCT DSAIPA/DS/0102/2019)</li>
 <li>Asistentes Inteligentes para las Infraestructuras de Datos Espaciales (IDEAIS - Red CYTED)</li>
 <li>MIning MUlti-source and MUlti-modal geo-referenced information (MIMU - FCT PTDC/CCI-CIF/32607/2017 - Principal Investigator)</li>
 <li>Discourse Analysis and Argumentation Mining from Text Sources (DARGMINTS - FCT POCI/01/0145/FEDER/031460 - Co-Principal Investigator)</li>
