--- a/index.html
+++ b/index.html
@@ -713,6 +713,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="">AI4Narratives'20</a> |
 						<a href="https://www.maisonworkshop.org">MAISoN'20</a> |
 						<a href="http://eric.univ-lyon2.fr/adbis-tpdl-eda-2020/tpdl/">TPDL'20</a> |
 						<a href="http://www.kdd.org/kdd2020/">KDD'20</a> |
@@ -820,6 +821,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
+						<a href="https://ieeeaccess.ieee.org">IEEE Access</a> |
 						<a href="http://www.journals.elsevier.com/applied-geography">Applied Geography</a> |
 						<a href="http://www.mdpi.com/journal/remotesensing">Remote Sensing</a> |
 						<a href="http://www.computer.org/web/tmc">Transactions on Mobile Computing</a> |						
