--- a/index.html
+++ b/index.html
@@ -716,6 +716,7 @@ involved in several research projects related to geospatial aspects in informati
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
 						<a href="">AI4Narratives'20</a> |
+						<a href="http://aacl2020.org">AACL-IJCNLP'20</a> |
 						<a href="https://www.maisonworkshop.org">MAISoN'20</a> |
 						<a href="http://eric.univ-lyon2.fr/adbis-tpdl-eda-2020/tpdl/">TPDL'20</a> |
 						<a href="http://www.kdd.org/kdd2020/">KDD'20</a> |
