--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
-						<a href="http://epia2020.inesc-id.pt">EPIA'20</a> |
+						<a href="http://epia2021.inesc-id.pt">EPIA'21</a> |
 						<a href="http://eamt2020.inesc-id.pt">EAMT'20</a> |
 						<a href="https://ecir2020.org">ECIR'20</a> |
 						<a href="https://bgmartins.github.io/sigspatial-geohumanities/">SIGSPATIAL GeoHumanities'19</a> |
@@ -878,8 +878,9 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://deepai.org/machine-learning/researcher/daniel-loureiro">Daniel Loureiro</a> |
 						<a href="https://scholar.google.com/citations?user=Vbw_-e8AAAAJ&hl=en">Gil Rocha</a> |
 						<a href="http://josedevezas.com/">José Devezas</a> | 
-						<a href="http://www.contrib.andrew.cmu.edu/~baojiany/">Baojiang (Chris) Yang</a> | 
 						
+						<a href="http://www.contrib.andrew.cmu.edu/~baojiany/">Baojiang (Chris) Yang</a> | 
+						<a href="http://www.gsd.inesc-id.pt/~dcastro/">Zhongmiao Li</a> |						
 						<a href="https://www.l2f.inesc-id.pt/w/Pedro_Mota">Pedro Mota</a> | 
 						<a href="https://scholar.google.com/citations?user=yyYfPJ8AAAAJ&hl=en">Gustavo Laboreiro</a> |
 						<a href="https://www.researchgate.net/profile/Zhaochen_Guo">Zhaochen Guo</a> | 
