--- a/index.html
+++ b/index.html
@@ -715,7 +715,10 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
-						<a href="">AI4Narratives'20</a> |
+						<a href="https://stko.geog.ucsb.edu/geokg-geoai2020/">GeoKG-GeoAI 2020</a> |
+						<a href="https://spatial-language.github.io">SpLU-RoboNLP 2019</a> |
+						<a href="https://sites.google.com/site/socialnlp2020/">SocialNLP'20</a> |
+						<a href="https://ai4narratives20.inesctec.pt">AI4Narratives'20</a> |
 						<a href="https://2020.emnlp.org">EMNLP'20</a> |
 						<a href="http://aacl2020.org">AACL-IJCNLP'20</a> |
 						<a href="https://www.maisonworkshop.org">MAISoN'20</a> |
