--- a/index.html
+++ b/index.html
@@ -676,6 +676,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
+						<a href="https://stko.geog.ucsb.edu/geokg-geoai2020/">GeoKG-GeoAI 2020</a> |
 						<a href="http://epia2021.inesc-id.pt">EPIA'21</a> |
 						<a href="http://eamt2020.inesc-id.pt">EAMT'20</a> |
 						<a href="https://ecir2020.org">ECIR'20</a> |
@@ -715,7 +716,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
-						<a href="https://stko.geog.ucsb.edu/geokg-geoai2020/">GeoKG-GeoAI 2020</a> |
+						<a href="https://ornlcda.github.io/SDProc/">SDP 2020</a> |
 						<a href="https://spatial-language.github.io">SpLU-RoboNLP 2019</a> |
 						<a href="https://sites.google.com/site/socialnlp2020/">SocialNLP'20</a> |
 						<a href="https://ai4narratives20.inesctec.pt">AI4Narratives'20</a> |
