--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>Bruno Martins | Instituto Superior Técnico, University of Lisbon</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="Keywords" content="Bruno Martins, Bruno Emanuel Martins, IST, University of Lisbon" />
-	<meta name="Description" content="Professor at Instituto Superior Técnico, University of Lisbon, Portugal." />
+	<meta name="Description" content="Assistant Professor at Instituto Superior Técnico, University of Lisbon, Portugal." />
 	<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" media="screen" href="iststyle.css" />
 	<link rel="stylesheet" type="text/css" media="print" href="print.css" />
@@ -57,7 +57,7 @@
 					<td><h1>Bruno Martins</h1></td>
 				</tr>
 				<tr>
-					<td>Professor at the <a href="http://www.dei.ist.utl.pt/">Department of Computer Science and Engineering</a> of <a href="http://www.ist.utl.pt/">Instituto Superior T&eacute;cnico</a> in the <a href="http://www.ulisboa.pt/">University of Lisbon</a>.</td>
+					<td>Assistant Professor at the <a href="http://www.dei.ist.utl.pt/">Department of Computer Science and Engineering</a> of <a href="http://www.ist.utl.pt/">Instituto Superior T&eacute;cnico</a> in the <a href="http://www.ulisboa.pt/">University of Lisbon</a>.</td>
 				</tr>
 				<tr>
 					<td>Researcher at the <a href="http://idss.inesc-id.pt">Information and Decision Support Systems Lab</a> of <a href="https://www.inesc-id.pt">INESC-ID</a>.</td>
