--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="http://josedevezas.com/">José Devezas</a> | 
 						
 						<a href="http://www.contrib.andrew.cmu.edu/~baojiany/">Baojiang (Chris) Yang</a> | 
-						<a href="http://www.gsd.inesc-id.pt/~dcastro/">Zhongmiao Li</a> |						
+						<a href="https://www.linkedin.com/in/zhongmiao-li-26b39426/">Zhongmiao Li</a> |						
 						<a href="https://www.l2f.inesc-id.pt/w/Pedro_Mota">Pedro Mota</a> | 
 						<a href="https://scholar.google.com/citations?user=yyYfPJ8AAAAJ&hl=en">Gustavo Laboreiro</a> |
 						<a href="https://www.researchgate.net/profile/Zhaochen_Guo">Zhaochen Guo</a> | 
