--- a/index.html
+++ b/index.html
@@ -716,6 +716,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://ludovicmoncla.github.io/sigspatial-geohumanities-2020/">SIGSPATIAL GeoHumanities'20</a> |
 						<a href="http://sigspatial2020.sigspatial.org">SIGSPATIAL'20</a> |
 						<a href="https://ornlcda.github.io/SDProc/">SDP 2020</a> |
 						<a href="https://spatial-language.github.io">SpLU-RoboNLP 2019</a> |
