--- a/index.html
+++ b/index.html
@@ -650,18 +650,26 @@ involved in several research projects related to geospatial aspects in informati
 			<!-- <li>Bruno Silva, <a href=""><i>Deep Learning Methods for Processing Digitized Herbarium Specimens</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
 			<li>Mário Cardoso, <a href=""><i>Deep Learning for Time Series Forecasting</i></a>, IST, 2019 (<i>co-supervised with Miguel Costa</i>)</li> <!-- ?? valores -->
 			<li>Bruno Magalhães, <a href=""><i>Integração de dados para construção de gazetteers</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
-			<li>Marcos Barata, <a href=""><i>Hybrid Approaches for Spatial Data Interpolation</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
+			<!-- <li>Marcos Barata, <a href=""><i>Hybrid Approaches for Spatial Data Interpolation</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
 			<li>João Cardoso, <a href=""><i>Deep Learning for the Automatic Generation of Medical Imaging Reports</i></a>, IST, 2019 (<i>co-supervised with Dr. Nuno Silva</i>)</li> <!-- ?? valores -->
 			<!-- <li>Gonçalo Simões, <a href=""><i>Deep Learning for Flood Extent Mapping</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores --> 
 			<li>João Machado, <a href=""><i>Data Extraction and Integration for Creating a Database of Portuguese Unions</i></a>, IST, 2019 (<i>co-supervised with Prof. José Borbinha</i>)</li> <!-- ?? valores -->
 			<li>Luís Antunes, <a href=""><i>Deep Learning Methods for Segmenting, Coloring, and Super-Resolving Historical Aerial Photos</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>David Coimbra, <a href=""><i>A Framework to Assess the Quality and Recommend Changes of Software Issues</i></a>, IST, 2019 (<i>co-supervised with Prof. Rui Maranhão</i>)</li> <!-- ?? valores -->
-			<li>Alexandre Machado, <a href=""><i>Process Mining From Natural Language Text</i></a>, IST, 2019 </li> <!-- ?? valores -->
+			<!-- <li>Alexandre Machado, <a href=""><i>Process Mining From Natural Language Text</i></a>, IST, 2019 </li> --> <!-- ?? valores --> 
 			<li>Nuno Amaro, <a href=""><i>Information Extraction on Policy Preferences from Party Manifestos, Political Speeches and Opinion Articles</i></a>, IST, 2019 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- ?? valores -->
 
 			<li>Isabel Coutinho, <a href=""><i>Classificação de texto clínico para auxiliar tarefas de codificação</i></a>, IST, 2019 (<i>co-supervised with Dr. João Leal</i>)</li> <!-- ?? valores -->
 			<li>Miguel Froes, <a href=""><i>Fenotipagem na Multimorbilidade</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
 			<li>Luís Pereira, <a href=""><i>Attention Augmented Convolutional Neural Networks for the Classification of Medical Images</i></a>, IST, 2019 (<i>co-supervised with Dr. Nuno Silva</i>)</li> <!-- ?? valores -->
+
+			<li>Diogo Viegas, <a href=""><i>Document Geocoding and Toponym Resolution with Neural Language Models</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
+			<li>João Barata, <a href=""><i>Deep Learning for Remote Sensing Image Captioning</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
+			<li>Martin Mirakyan, <a href=""><i>Neural Architecture Search for Semantic Segmentation of Aerial Imagery</i></a>, IST, 2020 (<i>co-supervised with Prof. Paolo Romano</i>)</li> <!-- ?? valores -->
+			<li>Leonor Fernandes, <a href=""><i>Neural Methods for Biomedical Synonym Discovery and Concept Alignment</i></a>, IST, 2020 (<i>co-supervised with Dr. Daniel Faria</i>)</li> <!-- ?? valores -->
+			<li>João Pires da Silva, <a href=""><i>Deep Learning for Medical Visual Question Answering</i></a>, IST, 2020 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->
+			<li>Inês Filipe, <a href=""><i>Classification of Chest X-Ray Images with Deep Neural Networks for Detecting COVID-19</i></a>, IST, 2020 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
+			<li>Bruno Dias, <a href=""><i>Deep Learning for Semantic Segmentation of Remote Sensing Imagery</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->			
 			</ul>
 		</td>
     </tr>
