--- a/index.html
+++ b/index.html
@@ -669,7 +669,8 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Leonor Fernandes, <a href=""><i>Neural Methods for Biomedical Synonym Discovery and Concept Alignment</i></a>, IST, 2020 (<i>co-supervised with Dr. Daniel Faria</i>)</li> <!-- ?? valores -->
 			<li>João Pires da Silva, <a href=""><i>Deep Learning for Medical Visual Question Answering</i></a>, IST, 2020 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->
 			<li>Inês Filipe, <a href=""><i>Classification of Chest X-Ray Images with Deep Neural Networks for Detecting COVID-19</i></a>, IST, 2020 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
-			<li>Bruno Dias, <a href=""><i>Deep Learning for Semantic Segmentation of Remote Sensing Imagery</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->			
+			<li>Bruno Dias, <a href=""><i>Deep Learning for Semantic Segmentation of Remote Sensing Imagery</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->	
+			<li>Rodrigo Morais da Costa, <a href=""><i>Deep Learning Methods for Predicting Missing Data over Time Series of Remote Sensing Imagery</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
