--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Miguel Froes, <a href=""><i>Fenotipagem na Multimorbilidade</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
 			<li>Luís Pereira, <a href=""><i>Attention Augmented Convolutional Neural Networks for the Classification of Medical Images</i></a>, IST, 2019 (<i>co-supervised with Dr. Nuno Silva</i>)</li> <!-- ?? valores -->
 
-			<li>Diogo Viegas, <a href=""><i>Document Geocoding and Toponym Resolution with Neural Language Models</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
+			<li>Diogo Viegas, <a href=""><i>Document Geocoding and Toponym Resolution with Neural Language Models</i></a>, IST, 2020 (<i>co-supervised with Prof. Maguelonne Teisseire</i>)</li> <!-- ?? valores -->
 			<li>João Barata, <a href=""><i>Deep Learning for Remote Sensing Image Captioning</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>Martin Mirakyan, <a href=""><i>Neural Architecture Search for Semantic Segmentation of Aerial Imagery</i></a>, IST, 2020 (<i>co-supervised with Prof. Paolo Romano</i>)</li> <!-- ?? valores -->
 			<li>Leonor Fernandes, <a href=""><i>Neural Methods for Biomedical Synonym Discovery and Concept Alignment</i></a>, IST, 2020 (<i>co-supervised with Dr. Daniel Faria</i>)</li> <!-- ?? valores -->
