--- a/index.html
+++ b/index.html
@@ -671,6 +671,11 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Inês Filipe, <a href=""><i>Classification of Chest X-Ray Images with Deep Neural Networks for Detecting COVID-19</i></a>, IST, 2020 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
 			<li>Bruno Dias, <a href=""><i>Deep Learning for Semantic Segmentation of Remote Sensing Imagery</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->	
 			<li>Rodrigo Morais da Costa, <a href=""><i>Deep Learning Methods for Predicting Missing Data over Time Series of Remote Sensing Imagery</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
+			<li>Tiago Mesquita, <a href=""><i>Neural Approaches for Question Retrieval and Generation from FAQ Databases</i></a>, IST, 2020 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- ?? valores -->
+			<li>André Godinho, <a href=""><i>Neural Approaches for Conversational Question Answering</i></a>, IST, 2020 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- ?? valores -->
+			<li>João Coelho, <a href=""><i>Spatio-Temporal Question Answering Leveraging Neural Language Models for Passage Retrieval</i></a>, IST, 2020 (<i>co-supervised with Prof. João Magalhães and Prof. Helena Sofia Pinto</i>)</li> <!-- ?? valores -->
+			<li>Filipe Amaral, <a href=""><i>Argumentation mining from textual documents combining deep learning and reasoning</i></a>, IST, 2020 (<i>co-supervised with Prof. Helena Sofia Pinto</i>)</li> <!-- ?? valores -->
+			<li>Francisco Matos, <a href=""><i>Delineating Boundaries for Vague Regions</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
