--- a/index.html
+++ b/index.html
@@ -900,6 +900,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://scholar.google.com/citations?user=Vbw_-e8AAAAJ&hl=en">Gil Rocha</a> |
 						<a href="http://josedevezas.com/">José Devezas</a> | 
 						
+						<a href="https://www.researchgate.net/profile/Sarah_Valentin4">Sarah Valentin</a> |	
 						<a href="http://www.contrib.andrew.cmu.edu/~baojiany/">Baojiang (Chris) Yang</a> | 
 						<a href="https://www.linkedin.com/in/zhongmiao-li-26b39426/">Zhongmiao Li</a> |						
 						<a href="https://www.l2f.inesc-id.pt/w/Pedro_Mota">Pedro Mota</a> | 
