--- a/index.html
+++ b/index.html
@@ -731,6 +731,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://dsaa2020.dsaa.co">IEEE DSAA'20</a> |
 						<a href="https://ludovicmoncla.github.io/sigspatial-geohumanities-2020/">SIGSPATIAL GeoHumanities'20</a> |
 						<a href="http://sigspatial2020.sigspatial.org">SIGSPATIAL'20</a> |
 						<a href="https://ornlcda.github.io/SDProc/">SDP 2020</a> |
