--- a/index.html
+++ b/index.html
@@ -730,6 +730,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://2021.eacl.org">EACL'21</a> |
 						<a href="http://dsaa2020.dsaa.co">IEEE DSAA'20</a> |
 						<a href="https://ludovicmoncla.github.io/sigspatial-geohumanities-2020/">SIGSPATIAL GeoHumanities'20</a> |
 						<a href="http://sigspatial2020.sigspatial.org">SIGSPATIAL'20</a> |
