--- a/index.html
+++ b/index.html
@@ -504,6 +504,7 @@ involved in several research projects related to geospatial aspects in informati
     <tr>
 		<td>
 			<ul>
+<li>Automated and participated surveillance of wildfire fuel management zones (FlorestaLimpa - FCT PCIF/MOG/0161/2019)</li>
 <li>MOnitoring Outbreak events for Disease surveillance in a data science context (MOOD - H2020-SC1-BHC-2018-2020 874850)</li>
 <li>A Machine Learning-Based Forecasting System for Shellfish Safety (MATISSE - FCT DSAIPA/DS/0026/2019)</li>
 <li>Factors to promote healthy dialogue and behaviours in online school communities (DEBAQI - FCT DSAIPA/DS/0102/2019)</li>
