--- a/index.html
+++ b/index.html
@@ -859,6 +859,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="http://onlinelibrary.wiley.com/journal/10.1111/(ISSN)1468-0394">Expert Systems</a> |						
 						<a href="http://onlinelibrary.wiley.com/journal/10.1111/(ISSN)1467-9671">Transactions in GIS</a> |
 						<a href="http://www.josis.org">Journal of Spatial Information Science</a> |
+						<a href="https://www.journals.elsevier.com/journal-of-king-saud-university-computer-and-information-sciences">Journal of King Saud University - Computer and Information Sciences</a> |
 						<a href="http://toit.acm.org">ACM Transactions on Internet Technology</a> |
 						<a href="http://www.tandfonline.com/toc/tjde20/current">International Journal of Digital Earth</a> | 
 						<a href="http://www.journals.elsevier.com/pervasive-and-mobile-computing">Pervasive and Mobile Computing</a> | 
