--- a/index.html
+++ b/index.html
@@ -219,6 +219,8 @@ involved in several research projects related to geospatial aspects in informati
 	</tr>
     	<tr>
 		<td>
+			2020/2021 | <a href="">Biomedical Informatics</a> (IST,MEIC,MEBiom)<br/>
+			2020/2021 | <a href="">Introduction to Databases</a> (MISE)<br/>
 			2019/2020 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RGI13/2019-2020/1-semestre">Information Processing and Retrieval</a> (IST,MEIC,METI)<br/>
 			2019/2020 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIBD77/2019-2020/1-semestre">Information Systems and Databases</a> (IST,MEEC,MEBiom)<br/>
 			2018/2019 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TIS-IBiom/2018-2019/2-semestre">Biomedical Informatics</a> (IST,MEIC,MEBiom)<br/>
@@ -239,13 +241,13 @@ involved in several research projects related to geospatial aspects in informati
 			2015/2016 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv/2015-2016/1-semestre">Research Topics</a> (IST,DEIC)<br/>
 			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RGI25/2014-2015/1-semestre">Information Processing and Retrieval</a> (IST,MEIC)<br/>
 			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/BD8/2014-2015/1-semestre">Databases</a> (IST,LEIC,LERC)<br/>
-			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/IBD-Ead/2014-2015/1-semestre">Introduction to Data Bases</a> (MISE)<br/>
+			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/IBD-Ead/2014-2015/1-semestre">Introduction to Databases</a> (MISE)<br/>
 			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv/2014-2015/1-semestre">Research Topics</a> (IST,DEIC)<br/>
 			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RInf/2014-2015/1-semestre">Information Retrieval</a> (IST,DEIC)<br/>
 			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/GTI225/2014-2015/1-semestre">Data Analysis and Integration</a> (IST,MEIC)<br/>
 			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AOBD10/2013-2014/2-semestre">Data Administration in Information Systems</a> (IST,MEIC,MERC)<br/>
 			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIG10/2013-2014/2-semestre">Systems for Geo-Referenced Information</a> (IST,MEIC)<br/>
-			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/IBD-Ead/2013-2014/1-semestre">Introduction to Data Bases</a> (MISE)<br/>
+			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/IBD-Ead/2013-2014/1-semestre">Introduction to Databases</a> (MISE)<br/>
 			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RInf/2013-2014/1-semestre">Information Retrieval</a> (IST,DEIC)<br/>
 			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv/2013-2014/1-semestre">Research Topics</a> (IST,DEIC)<br/>			
 			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/BD4/2013-2014/1-semestre">Databases</a> (IST,LEIC,LERC)<br/>
