--- a/index.html
+++ b/index.html
@@ -734,11 +734,12 @@ involved in several research projects related to geospatial aspects in informati
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
 						<a href="https://2021.eacl.org">EACL'21</a> |
+						<a href="http://www.conll.org/2020">CoNLL'20</a> |
+						<a href="https://spatial-language.github.io">SpLU 2020</a> |
 						<a href="http://dsaa2020.dsaa.co">IEEE DSAA'20</a> |
 						<a href="https://ludovicmoncla.github.io/sigspatial-geohumanities-2020/">SIGSPATIAL GeoHumanities'20</a> |
 						<a href="http://sigspatial2020.sigspatial.org">SIGSPATIAL'20</a> |
 						<a href="https://ornlcda.github.io/SDProc/">SDP 2020</a> |
-						<a href="https://spatial-language.github.io">SpLU-RoboNLP 2019</a> |
 						<a href="https://sites.google.com/site/socialnlp2020/">SocialNLP'20</a> |
 						<a href="https://ai4narratives20.inesctec.pt">AI4Narratives'20</a> |
 						<a href="https://2020.emnlp.org">EMNLP'20</a> |
@@ -754,6 +755,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://acl2020.org">ACL'20</a> |
 						<a href="https://aaai.org/Conferences/AAAI-20/">AAAI'20</a> |
 						<a href="https://www.sigapp.org/sac/sac2020/index.html">SAC'20</a> |
+						<a href="https://splu-robonlp.github.io">SpLU-RoboNLP 2019</a> |
 						<a href="https://www.maisonworkshop.org">MAISoN'19</a> |
 						<a href="https://nodalida2019.org">NoDaLiDa’19</a> |
 						<a href="http://www.geo.uzh.ch/~rsp/gir19/">GIR'19</a> |
