--- a/index.html
+++ b/index.html
@@ -733,6 +733,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://aaai.org/Conferences/AAAI-21/">AAAI'21</a> |
 						<a href="https://2021.eacl.org">EACL'21</a> |
 						<a href="http://www.conll.org/2020">CoNLL'20</a> |
 						<a href="https://spatial-language.github.io">SpLU 2020</a> |
