--- a/index.html
+++ b/index.html
@@ -853,6 +853,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
+						<a href="https://www.sciencedirect.com/journal/artificial-intelligence-in-medicine">Artificial Intelligence in Medicine</a> |
+						<a href="https://www.sciencedirect.com/journal/informatics-in-medicine-unlocked">Informatics in Medicine Unlocked</a> |						
 						<a href="https://ieeeaccess.ieee.org">IEEE Access</a> |
 						<a href="http://www.journals.elsevier.com/applied-geography">Applied Geography</a> |
 						<a href="http://www.mdpi.com/journal/remotesensing">Remote Sensing</a> |
