--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ involved in several research projects related to geospatial aspects in informati
 
 			<ul>
 <!-- <li>Luís Borges, and Bruno Martins <i>Evaluating Neural Methods for Approximate String Matching and Duplicate Detection</i>, ACM Journal of Data and Information Quality, 2020 [<a href="">PDF</a>]</li> -->
-<li>Maria Dias, João Monteiro, Jacinto Estima, Joel Silva, and Bruno Martins, <i>Semantic Segmentation and Colorization of Grayscale Aerial Imagery with W-Net Models</i>, Expert Systems, 2020 [<a href="">PDF</a>]</li>
+<li>Maria Dias, João Monteiro, Jacinto Estima, Joel Silva, and Bruno Martins, <i>Semantic Segmentation and Colorization of Grayscale Aerial Imagery with W-Net Models</i>, Expert Systems, 2020 [<a href="https://dx.doi.org/10.1111/exsy.12622">PDF</a>]</li>
 <li>Jorge Pereira, João Monteiro, Joel Silva, Jacinto Estima, and Bruno Martins, <i>Assessing Flood Severity from Crowdsourced Social Media Photos with Deep Neural Networks</i>, Multimedia Tools and Applications, 2020 [<a href="https://link.springer.com/article/10.1007/s11042-020-09196-8">PDF</a>]</li>
 <li>João Monteiro, Bruno Martins, Patricia Murrieta-Flores, and João M. Pires, <i>Spatial Disaggregation of Historical Census Data Leveraging Multiple Sources of Ancillary Information</i>, ISPRS International Journal of Geo-Information, 2019 [<a href="https://www.mdpi.com/2220-9964/8/8/327">PDF</a>]</li>
 <li>Ricardo A. Silva, João M. Pires, Nuno Datia, Maribel Y. Santos, Bruno Martins, and Fernando Birra, <i>Visual Analytics for Spatio-Temporal Events</i>, Multimedia Tools and Applications, 2019 [<a href="https://link.springer.com/article/10.1007/s11042-019-08012-2">PDF</a>]</li>
