--- a/index.html
+++ b/index.html
@@ -734,6 +734,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://www.ecir2021.eu">ECIR'21</a> |
 						<a href="https://aaai.org/Conferences/AAAI-21/">AAAI'21</a> |
 						<a href="https://2021.eacl.org">EACL'21</a> |
 						<a href="http://www.conll.org/2020">CoNLL'20</a> |
@@ -854,6 +855,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
+						<a href="https://dl.acm.org/journal/tsas">ACM Transactions on Spatial Algorithms and Systems</a> |
 						<a href="https://www.sciencedirect.com/journal/artificial-intelligence-in-medicine">Artificial Intelligence in Medicine</a> |
 						<a href="https://www.sciencedirect.com/journal/informatics-in-medicine-unlocked">Informatics in Medicine Unlocked</a> |						
 						<a href="https://ieeeaccess.ieee.org">IEEE Access</a> |
