--- a/index.html
+++ b/index.html
@@ -551,6 +551,8 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Tiago Gonçalves, <i>Visual Analysis of Human Mobility Data</i>, FCUL (<i>co-supervised with Prof. Ana Paula Afonso</i>)</li>
 			<li>João Monteiro, <i>Mining multi-source and multi-modal geo-referenced information</i>, IST (<i>ongoing co-supervision with Prof. João Moura Pires</i>)</li>
 			<li>Luís Borges, <i>Neural Information Retrieval</i>, IST/CMU-PT (<i>ongoing co-supervision with Prof. Jamie Callan</i>)</li>
+			<li>Rita Ramos, <i>Deep Learning Methods Bridging Language and Vision</i>, IST/KU.DK (<i>ongoing co-supervision with Prof. Desmond Elliott</i>)</li>
+			<li>André Neves, <i>Deep Learning for Remote Sensing Applications</i>, FCT-UNL (<i>ongoing co-supervision with Prof. João Moura Pires and Prof. Carlos Damásio</i>)</li>			
 			</ul>
 			<h3>MSc Students</h3>
 			<ul>
