--- a/index.html
+++ b/index.html
@@ -642,11 +642,11 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Pedro Gomes, <a href=""><i>Processing query logs for identifying user sessions</i></a>, IST, 2019 (<i>co-supervised with Luís Cruz</i>)</li> <!-- 17 valores -->
 			<li>Didier Dias, <a href=""><i>Classificação de solos com técnicas de aprendizagem automática</i></a>, FCT/UNL, 2019 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- 18 valores -->	
 			<li>Tiago Conceicao, <a href=""><i>Uso de redes neuronais profundas para geocodificação de imagens</i></a>, FCT/UNL, 2019 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- 17 valores -->
-
-			<li>Liliana Oliveira, <a href=""><i>Classificação automática de causas de mortalidade de acordo com a norma ICD-10</i></a>, IST, 2020 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
-			<li>Sofia Aparício, <a href=""><i>Deep learning para a quantificação da valência e intensidade de emoções expressas em língua natural</i></a>, IST, 2020 (<i>co-supervised with João Monteiro</i>)</li> <!-- ?? valores -->
+			<li>Adriana Pereira, <a href=""><i>Prospecção de argumentos em texto</i></a>, IST, 2020 (<i>co-supervised with Prof. Henrique Lopes Cardoso</i>)</li> <!-- 17 valores -->
+			<li>Liliana Oliveira, <a href=""><i>Classificação automática de causas de mortalidade de acordo com a norma ICD-10</i></a>, IST, 2020 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- 14 valores -->
+			<li>Sofia Aparício, <a href=""><i>Deep learning para a quantificação da valência e intensidade de emoções expressas em língua natural</i></a>, IST, 2020 (<i>co-supervised with João Monteiro</i>)</li> <!-- 18 valores -->
+			
 			<li>Manuel Santos, <a href=""><i>Deep learning methods for document relevance ranking in the context of search engines for legal/legislative contents</i></a>, IST, 2020 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- ?? valores -->
-			<li>Adriana Pereira, <a href=""><i>Prospecção de argumentos em texto</i></a>, IST, 2020 (<i>co-supervised with Prof. Henrique Lopes Cardoso</i>)</li> <!-- ?? valores -->
 
 			<li>Tomás de Oliveira, <a href=""><i>Deep learning para classificação de diagramas para peças de cerâmica recuperadas em intervenções arqueológicas</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>Henrique Almeida, <a href=""><i>Mapping Urban Areas Leveraging the Analysis of Ground-Level Imagery with Convolutional Neural Networks</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
