--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Tiago Conceicao, <a href=""><i>Uso de redes neuronais profundas para geocodificação de imagens</i></a>, FCT/UNL, 2019 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- 17 valores -->
 			<li>Adriana Pereira, <a href=""><i>Prospecção de argumentos em texto</i></a>, IST, 2020 (<i>co-supervised with Prof. Henrique Lopes Cardoso</i>)</li> <!-- 17 valores -->
 			<li>Liliana Oliveira, <a href=""><i>Classificação automática de causas de mortalidade de acordo com a norma ICD-10</i></a>, IST, 2020 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- 14 valores -->
-			<li>Sofia Aparício, <a href=""><i>Deep learning para a quantificação da valência e intensidade de emoções expressas em língua natural</i></a>, IST, 2020 (<i>co-supervised with João Monteiro</i>)</li> <!-- 18 valores -->
+			<li>Sofia Aparício, <a href=""><i>Deep learning para a quantificação da valência e intensidade de emoções expressas em língua natural</i></a>, IST, 2020</li> <!-- 17 valores -->
 			
 			<li>Manuel Santos, <a href=""><i>Deep learning methods for document relevance ranking in the context of search engines for legal/legislative contents</i></a>, IST, 2020 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- ?? valores -->
 
