--- a/index.html
+++ b/index.html
@@ -507,6 +507,12 @@ involved in several research projects related to geospatial aspects in informati
     <tr>
 		<td>
 			<ul>
+<li>Identificação Precoce e Caracterização dos doentes com COVID-19 Através da Análise de Imagens de Radiografia Convencional (DeepPathCOVIDx - P2020 694689)</li>
+<li>Intelligent Agents Generator (BotBuilder - P2020)</li>
+<li>Intelligent System of Multimorbidity Management  (IntelligentCare - CMU-PT LISBOA-01-0247-FEDER-045948)</li>
+<li>Fighting Fake News (ContraFake - P2020)</li>
+<li>Decoding Legislation Using Natural Language Processing (LAW-NLP - INCM)</li>
+<li>Improving Search in Diário da República (SEARCH-DRE - INCM)</li>
 <li>Automated and participated surveillance of wildfire fuel management zones (FlorestaLimpa - FCT PCIF/MOG/0161/2019)</li>
 <li>MOnitoring Outbreak events for Disease surveillance in a data science context (MOOD - H2020-SC1-BHC-2018-2020 874850)</li>
 <li>A Machine Learning-Based Forecasting System for Shellfish Safety (MATISSE - FCT DSAIPA/DS/0026/2019)</li>
