--- a/index.html
+++ b/index.html
@@ -742,6 +742,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://text2story21.inesctec.pt">Text2Story'21</a> |
 						<a href="https://www.ecir2021.eu">ECIR'21</a> |
 						<a href="https://aaai.org/Conferences/AAAI-21/">AAAI'21</a> |
 						<a href="https://2021.eacl.org">EACL'21</a> |
@@ -755,6 +756,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://ai4narratives20.inesctec.pt">AI4Narratives'20</a> |
 						<a href="https://2020.emnlp.org">EMNLP'20</a> |
 						<a href="http://aacl2020.org">AACL-IJCNLP'20</a> |
+						<a href="https://text2story21.inesctec.pt">Text2Story'20</a> |
 						<a href="https://www.maisonworkshop.org">MAISoN'20</a> |
 						<a href="http://eric.univ-lyon2.fr/adbis-tpdl-eda-2020/tpdl/">TPDL'20</a> |
 						<a href="http://www.kdd.org/kdd2020/">KDD'20</a> |
@@ -781,7 +783,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="http://ijcai19.org">IJCAI'19</a> |
 						<a href="http://ach2019.ach.org">ACH'19</a> |
 						<a href="http://epia2019.utad.pt">EPIA'19</a> |
-						<a href="http://text2story18.inesctec.pt">Text2Story'19</a> |
+						<a href="http://text2story19.inesctec.pt">Text2Story'19</a> |
 						<a href="http://sites.google.com/site/socialnlp2019/">SocialNLP'19</a> |
 						<a href="http://dh2019.adho.org/">DH'19</a> |
 						<a href="http://sociocom.jp/~event/uistda2019/index.php">UISTDA'19</a> |
