--- a/index.html
+++ b/index.html
@@ -916,12 +916,13 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
+						<a href="https://www.hlt.inesc-id.pt/w/Eugénio_Ribeiro">Eugénio Alves Ribeiro</a> |
 						<a href="http://www.gsd.inesc-id.pt/~dcastro/">Daniel Castro</a> |
 						<a href="https://www.linkedin.com/in/fernandoblalves/">Fernando Alves</a> |
 						<a href="https://deepai.org/machine-learning/researcher/daniel-loureiro">Daniel Loureiro</a> |
 						<a href="https://scholar.google.com/citations?user=Vbw_-e8AAAAJ&hl=en">Gil Rocha</a> |
-						<a href="http://josedevezas.com/">José Devezas</a> | 
 						
+						<a href="http://josedevezas.com/">José Devezas</a> | 						
 						<a href="https://www.researchgate.net/profile/Sarah_Valentin4">Sarah Valentin</a> |	
 						<a href="http://www.contrib.andrew.cmu.edu/~baojiany/">Baojiang (Chris) Yang</a> | 
 						<a href="https://www.linkedin.com/in/zhongmiao-li-26b39426/">Zhongmiao Li</a> |						
