--- a/index.html
+++ b/index.html
@@ -742,6 +742,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://2021.naacl.org">NAACL-HLT'21</a> |
 						<a href="https://text2story21.inesctec.pt">Text2Story'21</a> |
 						<a href="https://www.ecir2021.eu">ECIR'21</a> |
 						<a href="https://aaai.org/Conferences/AAAI-21/">AAAI'21</a> |
