--- a/index.html
+++ b/index.html
@@ -743,6 +743,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://dsaa2021.dcc.fc.up.pt">IEEE DSAA'21</a> |
 						<a href="https://2021.naacl.org">NAACL-HLT'21</a> |
 						<a href="https://text2story21.inesctec.pt">Text2Story'21</a> |
 						<a href="https://www.ecir2021.eu">ECIR'21</a> |
