--- a/index.html
+++ b/index.html
@@ -652,22 +652,21 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Liliana Oliveira, <a href=""><i>Classificação automática de causas de mortalidade de acordo com a norma ICD-10</i></a>, IST, 2020 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- 14 valores -->
 			<li>Sofia Aparício, <a href=""><i>Deep learning para a quantificação da valência e intensidade de emoções expressas em língua natural</i></a>, IST, 2020</li> <!-- 17 valores -->
 			<li>Marta Gonzalez, <a href=""><i>River Cure Portal: Colaborative GeoPortal for Curatorship of Digital Resources in the Water Management Domain</i></a>, IST, 2020 (<i>co-supervised with Prof. Alberto Silva</i>)</li> <!-- 18 valores -->
+			<li>João Cardoso, <a href=""><i>Deep Learning for the Automatic Generation of Medical Imaging Reports</i></a>, IST, 2020 (<i>co-supervised with Dr. Nuno Silva</i>)</li> <!-- 18 valores -->
+			<li>David Coimbra, <a href=""><i>A Framework to Assess the Quality and Recommend Changes of Software Issues</i></a>, IST, 2020 (<i>co-supervised with Prof. Rui Maranhão</i>)</li> <!-- 17 valores -->
+			<li>Mário Cardoso, <a href=""><i>Deep Learning for Time Series Forecasting</i></a>, IST, 2020 (<i>co-supervised with Jacinto Estima</i>)</li> <!-- 18 valores -->
 				
-			<li>Manuel Santos, <a href=""><i>Deep learning methods for document relevance ranking in the context of search engines for legal/legislative contents</i></a>, IST, 2020 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- ?? valores -->
-				
+			<li>Manuel Santos, <a href=""><i>Deep learning methods for document relevance ranking in the context of search engines for legal/legislative contents</i></a>, IST, 2020 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- ?? valores -->				
 			<li>Tomás de Oliveira, <a href=""><i>Deep learning para classificação de diagramas para peças de cerâmica recuperadas em intervenções arqueológicas</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>Henrique Almeida, <a href=""><i>Mapping Urban Areas Leveraging the Analysis of Ground-Level Imagery with Convolutional Neural Networks</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>Nádia Fernandes, <a href=""><i>Co-Reference Resolution in Portuguese and Spanish Texts</i></a>, IST, 2020 (<i>co-supervised with Prof. Henrique Lopes Cardoso</i>)</li> <!-- ?? valores -->
 			<li>Rita Conde, <a href=""><i>Predição de eventos em comércio online e sua interação com pesquisas</i></a>, IST, 2020 (<i>co-supervised with Dr. Pedro Balage</i>)</li> <!-- ?? valores -->
 			<!-- <li>Bruno Silva, <a href=""><i>Deep Learning Methods for Processing Digitized Herbarium Specimens</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
-			<li>Mário Cardoso, <a href=""><i>Deep Learning for Time Series Forecasting</i></a>, IST, 2020 (<i>co-supervised with Miguel Costa</i>)</li> <!-- ?? valores -->
 			<li>Bruno Magalhães, <a href=""><i>Integração de dados para construção de gazetteers</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<!-- <li>Marcos Barata, <a href=""><i>Hybrid Approaches for Spatial Data Interpolation</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
-			<li>João Cardoso, <a href=""><i>Deep Learning for the Automatic Generation of Medical Imaging Reports</i></a>, IST, 2020 (<i>co-supervised with Dr. Nuno Silva</i>)</li> <!-- ?? valores -->
 			<!-- <li>Gonçalo Simões, <a href=""><i>Deep Learning for Flood Extent Mapping</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores --> 
 			<li>João Machado, <a href=""><i>Data Extraction and Integration for Creating a Database of Portuguese Unions</i></a>, IST, 2020 (<i>co-supervised with Prof. José Borbinha</i>)</li> <!-- ?? valores -->
 			<li>Luís Antunes, <a href=""><i>Deep Learning Methods for Segmenting, Coloring, and Super-Resolving Historical Aerial Photos</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
-			<li>David Coimbra, <a href=""><i>A Framework to Assess the Quality and Recommend Changes of Software Issues</i></a>, IST, 2020 (<i>co-supervised with Prof. Rui Maranhão</i>)</li> <!-- ?? valores -->
 			<!-- <li>Alexandre Machado, <a href=""><i>Process Mining From Natural Language Text</i></a>, IST, 2020 </li> --> <!-- ?? valores --> 
 			<li>Nuno Amaro, <a href=""><i>Information Extraction on Policy Preferences from Party Manifestos, Political Speeches and Opinion Articles</i></a>, IST, 2020 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- ?? valores -->
 
