--- a/index.html
+++ b/index.html
@@ -950,6 +950,10 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="FCTUNL-JOAO">Ana Luís Coelho</a> |
+						<a href="FCTUNL-LUDWIG">Vladimir Balayan</a> |						
+						<a href="FCTUNL-JOAO">Rafael Ferreira</a> |						
+						
 						<a href="DEI-HELENA">Catarina Conceição</a> |
 						<a href="DEI-DIOGO">Frederico Monteiro</a> |
 						
