--- a/index.html
+++ b/index.html
@@ -346,7 +346,8 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
-<li>Mário Cardoso, Jacinto Estima, and Bruno Martins, <i>Spatio-Temporal Forecasting With Gridded Remote Sensing Data Using Feed-Backward Decoding</i>, Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2020 [<a href="">PDF</a>]</li>
+<li>Luís Borges, Jamie Callan, and Bruno Martins, <i>Assessing the Benefits of Model Ensembles in Neural Re-Ranking for Passage Retrieval</i>, Proceedings of the European Conference on Information Retrieval, 2021 [<a href="">PDF</a>]</li>
+<li>Mário Cardoso, Jacinto Estima, and Bruno Martins, <i>Spatio-Temporal Forecasting With Gridded Remote Sensing Data Using Feed-Backward Decoding</i>, Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2020 [<a href="https://dl.acm.org/doi/abs/10.1145/3397536.3422247">PDF</a>]</li>
 <li>Paula Carvalho, Bruno Martins, Hugo Rosa, Silvio Amir, Jorge Baptista, and Mário J. Silva, <i>Situational Irony in Farcical News Headlines</i>, Proceedings of the International Conference on Computational Processing of Portuguese, 2020 [<a href="https://link.springer.com/chapter/10.1007/978-3-030-41505-1_7">PDF</a>]</li>
 <li>Jorge Pereira, João Monteiro, Jacinto Estima, and Bruno Martins, <i>Assessing Flood Severity from Georeferenced Photos</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2019 [<a href="https://dl.acm.org/doi/abs/10.1145/3371140.3371145">PDF</a>]</li>
 <li>Nelson Nunes, Bruno Martins, Nuno André da Silva, Francisca Leite, and Mário J. Silva, <i>A Multi-Modal Deep Learning Method for Classifying Chest Radiology Exams</i>, Proceedings of the Portuguese Conference on Artificial Intelligence, 2019 [<a href="https://link.springer.com/chapter/10.1007/978-3-030-30241-2_28">PDF</a>]</li>
@@ -466,7 +467,8 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Other Publications</h3>
 
 			<ul>
-<li>Bruno Martins, Ludovic Moncla, and Patricia Murrieta-Flores, <i>GeoHumanities 2019 Workshop Report</i>, SIGSPATIAL Special, 2019 [<a href="">PDF</a>]</li>	
+<!-- <li>Nuno Amaro, Bruno Martins, and Miguel Won, <i>Análise de Declarações Políticas em Documentos de Texto com Modelos Contextuais Multilingues</i>, Linguamática, Revista para o Processamento Automático das Línguas Ibéricas, vol. 6, no. 1, 2021 [<a href="http://www.linguamatica.com/index.php/linguamatica/article/view/v6n1-04">PDF</a>]</li> -->
+<li>Bruno Martins, Ludovic Moncla, and Patricia Murrieta-Flores, <i>GeoHumanities 2019 Workshop Report</i>, SIGSPATIAL Special, 2019 [<a href="https://dl.acm.org/doi/10.1145/3383653.3383664">PDF</a>]</li>
 <li>Patricia Murrieta-Flores and Bruno Martins, <i>The geospatial humanities: past, present and future</i>, International Journal of Geographical Information Science, 2019 [<a href="https://www.tandfonline.com/doi/full/10.1080/13658816.2019.1645336">PDF</a>]</li>	
 <li>Bruno Martins and Patricia Murrieta-Flores, <i>GeoHumanities 2018 Workshop Report</i>, SIGSPATIAL Special, 2018 [<a href="https://dl.acm.org/citation.cfm?id=3307610">PDF</a>]</li>	
 <li>Bruno Martins and Patricia Murrieta-Flores, <i>GeoHumanities 2017 Workshop Report</i>, SIGSPATIAL Special, 2017 [<a href="https://dl.acm.org/citation.cfm?id=3178406">PDF</a>]</li>				
@@ -687,6 +689,8 @@ involved in several research projects related to geospatial aspects in informati
 			<li>João Coelho, <a href=""><i>Spatio-Temporal Question Answering Leveraging Neural Language Models for Passage Retrieval</i></a>, IST, 2021 (<i>co-supervised with Prof. João Magalhães and Prof. Helena Sofia Pinto</i>)</li> <!-- ?? valores -->
 			<li>Filipe Amaral, <a href=""><i>Argumentation mining from textual documents combining deep learning and reasoning</i></a>, IST, 2021 (<i>co-supervised with Prof. Helena Sofia Pinto</i>)</li> <!-- ?? valores -->
 			<li>Francisco Matos, <a href=""><i>Delineating Boundaries for Vague Regions</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
+
+			<li>Artur Guimas, <a href=""><i>Key-phrase Extraction Combining Graph-Based Methods and Neural Language Models</i></a>, IST, 2021 (<i>co-supervised with Prof. Mathieu Roche</i>)</li> <!-- ?? valores -->			
 			</ul>
 		</td>
     </tr>
@@ -919,6 +923,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
+						<a href="https://vbn.aau.dk/en/persons/146477">Marina Georgati</a> |
 						<a href="https://www.hlt.inesc-id.pt/w/Eugénio_Ribeiro">Eugénio Alves Ribeiro</a> |
 						<a href="http://www.gsd.inesc-id.pt/~dcastro/">Daniel Castro</a> |
 						<a href="https://www.linkedin.com/in/fernandoblalves/">Fernando Alves</a> |
