--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ involved in several research projects related to geospatial aspects in informati
 <li>Identificação Precoce e Caracterização dos doentes com COVID-19 Através da Análise de Imagens de Radiografia Convencional (DeepPathCOVIDx - P2020 694689)</li>
 <li>Intelligent Agents Generator (BotBuilder - P2020)</li>
 <li>Intelligent System of Multimorbidity Management  (IntelligentCare - CMU-PT LISBOA-01-0247-FEDER-045948)</li>
-<li>Fighting Fake News (ContraFake - P2020)</li>
+<li>Fighting Fake News (ContraFake - P2020 POCI-05-5762-FSE-000217)</li>
 <li>Decoding Legislation Using Natural Language Processing (LAW-NLP - INCM)</li>
 <li>Improving Search in Diário da República (SEARCH-DRE - INCM)</li>
 <li>Automated and participated surveillance of wildfire fuel management zones (FlorestaLimpa - FCT PCIF/MOG/0161/2019)</li>
@@ -657,6 +657,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>João Cardoso, <a href=""><i>Deep Learning for the Automatic Generation of Medical Imaging Reports</i></a>, IST, 2020 (<i>co-supervised with Dr. Nuno Silva</i>)</li> <!-- 18 valores -->
 			<li>David Coimbra, <a href=""><i>A Framework to Assess the Quality and Recommend Changes of Software Issues</i></a>, IST, 2020 (<i>co-supervised with Prof. Rui Maranhão</i>)</li> <!-- 17 valores -->
 			<li>Mário Cardoso, <a href=""><i>Deep Learning for Time Series Forecasting</i></a>, IST, 2020 (<i>co-supervised with Jacinto Estima</i>)</li> <!-- 18 valores -->
+
 				
 			<li>Manuel Santos, <a href=""><i>Deep learning methods for document relevance ranking in the context of search engines for legal/legislative contents</i></a>, IST, 2020 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- ?? valores -->				
 			<li>Tomás de Oliveira, <a href=""><i>Deep learning para classificação de diagramas para peças de cerâmica recuperadas em intervenções arqueológicas</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
@@ -690,7 +691,8 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Filipe Amaral, <a href=""><i>Argumentation mining from textual documents combining deep learning and reasoning</i></a>, IST, 2021 (<i>co-supervised with Prof. Helena Sofia Pinto</i>)</li> <!-- ?? valores -->
 			<li>Francisco Matos, <a href=""><i>Delineating Boundaries for Vague Regions</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 
-			<li>Artur Guimas, <a href=""><i>Key-phrase Extraction Combining Graph-Based Methods and Neural Language Models</i></a>, IST, 2021 (<i>co-supervised with Prof. Mathieu Roche</i>)</li> <!-- ?? valores -->			
+			<li>Artur Guimas, <a href=""><i>Key-phrase Extraction Combining Graph-Based Methods and Neural Language Models</i></a>, IST, 2021 (<i>co-supervised with Prof. Mathieu Roche</i>)</li> <!-- ?? valores -->
+			<li>Nuno Infante, <a href=""><i>Clinical Text Summarization</i></a>, IST, 2021 (<i>co-supervised with Dr. Nuno Silva</i>)</li> <!-- ?? valores -->				
 			</ul>
 		</td>
     </tr>
@@ -956,9 +958,11 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<!-- Daniel e Duarte do David -->
 						<a href="FCTUNL-JOAO">Ana Luís Coelho</a> |
 						<a href="FCTUNL-LUDWIG">Vladimir Balayan</a> |						
 						<a href="FCTUNL-JOAO">Rafael Ferreira</a> |						
+						<a href="DEI-DANIEL-GONÇALVES">João Oliveira</a> |
 						
 						<a href="DEI-HELENA">Catarina Conceição</a> |
 						<a href="DEI-DIOGO">Frederico Monteiro</a> |
@@ -981,7 +985,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="DEI-PAVEL">Ricardo Pereira</a> |
 						<a href="DEI-LUISA">Miguel Ângelo Ventura</a> |																		
 						<a href="DEEC">Pedro Ferreira</a> |
-						<a href="DEI-MAMEDE-PROJECTO">Valentyn Hulevych</a> |
+						<a href="DEI-MAMEDE">Valentyn Hulevych</a> |
 						<a href="DEEC-JCARVALHO-RAMON">João Pedro Lages</a> |
 						<a href="FCUL">Cláudio Vieira</a> |
 						<a href="IST">Ricardo Abreu</a> |
